# TopoGen

./: .gitignore  CMakeLists.txt  PACKAGING.md  README.md  package-lock.json  package.json  vcpkg.json
.github/: vcpkg.json
.github/workflows/: build-packages.yml
cmake/modules/: DetectArchitecture.cmake
cmake/toolchains/: README.md  linux-aarch64.cmake  macos-universal.cmake
development_tools/: README.md  do_next_run.sh  profile-baseline-simple.sh  profile-build.sh  profile-components-dtrace.sh  profile-comprehensive.sh  profile-memory.sh
doc/: ACKNOWLEDGMENTS.md  BUILD_INSTRUCTIONS.md  BUILD_OPTIMIZATION_README.md  COPYRIGHT  LICENSE  README.md  The Story.md  example_config_annotated.json  labeling_guide.md  version_control_guide.md
docs/: ICON_GENERATION.md  MULTI_ARCH_BUILDS.md
docs/man/: topo-gen-gui.1  topo-gen.1
include/: LabelRenderer.hpp  TextFitter.hpp  TextPathGenerator.hpp  UnitParser.hpp  topographic_generator.hpp
packaging/common/: dependencies.md  version.json.template
packaging/linux/: LINUX_PACKAGING.md  bundle_deps.sh
packaging/macos/: Info.plist  MACOS_PACKAGING.md  bundle_deps.sh
packaging/macos/dmg-template/: README.md
packaging/windows/: WINDOWS_PACKAGING.md  bundle_deps.sh
scripts/: README.md  build-all.sh  build-gui.sh  build_environment.sh  build_macos.sh  check_dependencies.sh  ci.sh  clean.sh  create_version.sh  delete-vcpkg-packages.sh  deploy.sh  generate_app_icon.py  install_dependencies.sh  quick-build.sh  setup_environment.sh  test.sh  test_all_options.sh  validate_test_results.sh
scripts/package/: create-appimage.sh  create-deb.sh  create-dmg.sh  create-flatpak.sh  create-homebrew.sh  create-msi.sh  create-pkg.sh  create-portable-zip.sh  create-rpm.sh  create-winget.sh
src/: main.cpp  version.h.in
src/cli/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  ExportOrchestrator.cpp  ExportOrchestrator.hpp  SimpleCommandLineParser.hpp
src/core/: CMakeLists.txt  ContourGenerator.cpp  ContourGenerator.hpp  CrashHandler.cpp  CrashHandler.hpp  ElevationProcessor.cpp  ElevationProcessor.hpp  ExecutionPolicies.hpp  GeocodeService.cpp  GeocodeService.hpp  HeightmapTriangulator.cpp  HeightmapTriangulator.hpp  InputValidator.cpp  InputValidator.hpp  LabelRenderer.cpp  Logger.cpp  Logger.hpp  MemoryMonitor.cpp  MemoryMonitor.hpp  OSMTileCache.cpp  OSMTileCache.hpp  OutputTracker.cpp  OutputTracker.hpp  SRTMDownloader.cpp  SRTMDownloader.hpp  ScalingCalculator.cpp  ScalingCalculator.hpp  StackGuard.cpp  StackGuard.hpp  TextFitter.cpp  TextPathGenerator.cpp  TopographicGenerator.cpp  TopographicMesh.cpp  TopographicMesh.hpp  UnitParser.cpp
src/export/: CMakeLists.txt  GeoJSONExporter.cpp  GeoJSONExporter.hpp  GeoTIFFExporter.cpp  GeoTIFFExporter.hpp  MultiFormatExporter.cpp  MultiFormatExporter.hpp  NURBSExporter.cpp  OBJExporter.cpp  PLYExporter.cpp  PNGExporter.cpp  PNGExporter.hpp  RasterAnnotator.cpp  RasterAnnotator.hpp  RasterBuilder.cpp  RasterBuilder.hpp  SVGExporter.cpp  SVGExporter.hpp  ShapefileExporter.cpp  ShapefileExporter.hpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
src/gui/dialogs/: FirstRunDialog.cpp  FirstRunDialog.hpp  GenerationProgressDialog.cpp  GenerationProgressDialog.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp
src/gui/panels/: MapFeaturesPanel.cpp  MapFeaturesPanel.hpp  MeshConfigPanel.cpp  MeshConfigPanel.hpp  RasterConfigPanel.cpp  RasterConfigPanel.hpp  VectorConfigPanel.cpp  VectorConfigPanel.hpp
src/gui/resources/: app.rc.in  leaflet_map.html  resources.qrc  topo-gen-gui.desktop
src/gui/utils/: MapBridge.hpp  MapLabelManager.cpp  MapLabelManager.hpp  NominatimClient.cpp  NominatimClient.hpp  StateManager.cpp  StateManager.hpp  TileDownloader.cpp  TileDownloader.hpp
src/gui/widgets/: MapWidget.cpp  MapWidget.hpp  PreviewDialog.cpp  PreviewDialog.hpp  ZoomControls.cpp  ZoomControls.hpp
src/gui/workers/: GenerationWorker.cpp  GenerationWorker.hpp  TilePreloadWorker.cpp  TilePreloadWorker.hpp
version_control/: cpp-topographic-generator_v0.22.001_public_beta_notes.md
